Link to song edit page in songs list Translation Small fixes

--- a/css/admin.css
+++ b/css/admin.css
@@ -2,3 +2,7 @@
 .part-tabs .pull-right {
   float: right;
 }
+
+p.top-add { 
+  margin-bottom: 1em;
+}
